...
            }
        }
    }

    var body: some View {
        VStack(alignment: .leading){
            Text("Home")
                .font(.system(size: 28))
                .fontWeight(.bold)
                .padding(.horizontal, 15)
            
            HStack {
                Image(systemName: "magnifyingglass")
...
                        .buttonStyle(PlainButtonStyle())
                    }
                }
                .padding(.horizontal, 15)
                .padding(.vertical, 10)
            }
            .accessibilityIdentifier("HomeScrollView")
        }
        .padding(.bottom, 20)
        .onAppear {
            homeVM.getMovies()
        }
    }
...
