...
                                .foregroundColor(.red)
                                .padding()
                                .background(Color.red.opacity(0.3))
                                .clipShape(Circle())
                        }
                        .padding(.horizontal)
                        .accessibilityIdentifier("FavoriteButton")
                        .accessibilityValue(isFavorite ? "true" : "false")

                    }
                    
                    HStack(alignment: .top){
                        VStack(alignment: .leading){
...
